tests/machine/x/erlang/group_by_left_join.error
exit status 127
tests/machine/x/erlang_new/group_by_left_join.erl:7:251: syntax error before: ','
escript: There were compilation errors.
